fix(frontend): increase campaigns header gap

--- a/packages/frontend/src/components/campaigns/skeleton-campaigns/styles.module.css
+++ b/packages/frontend/src/components/campaigns/skeleton-campaigns/styles.module.css
@@ -5,7 +5,7 @@
 }
 
 .header {
-    @apply w-full flex flex-col gap-2;
+    @apply w-full flex flex-col gap-3;
 }
 
 .title {
