--- a/packages/frontend/src/components/campaigns/styles.module.css
+++ b/packages/frontend/src/components/campaigns/styles.module.css
@@ -5,7 +5,7 @@
 }
 
 .header {
-    @apply flex flex-col gap-1;
+    @apply flex flex-col gap-2;
 }
 
 .tableWrapper {
